.metadata/.plugins/org.eclipse.cdt.ui/LoRaClassA.build.log
12:25:32 **** Incremental Build of configuration Debug for project LoRaClassA ****
Info: Internal Builder is used for build
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0plus -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32L072xx -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/BSP/B-L072Z-LRWAN1 -I../Drivers/BSP/MLM32L07X01 -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Include -I../Inc -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -o Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_irda.o ..\Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_irda.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0plus -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32L072xx -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/BSP/B-L072Z-LRWAN1 -I../Drivers/BSP/MLM32L07X01 -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Include -I../Inc -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -o Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_firewall.o ..\Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_firewall.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0plus -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32L072xx -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/BSP/B-L072Z-LRWAN1 -I../Drivers/BSP/MLM32L07X01 -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Include -I../Inc -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -o Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_comp.o ..\Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_comp.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0plus -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32L072xx -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/BSP/B-L072Z-LRWAN1 -I../Drivers/BSP/MLM32L07X01 -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Include -I../Inc -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -o Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_pcd_ex.o ..\Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_pcd_ex.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0plus -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32L072xx -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/BSP/B-L072Z-LRWAN1 -I../Drivers/BSP/MLM32L07X01 -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Include -I../Inc -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -o Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_smbus.o ..\Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_smbus.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0plus -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32L072xx -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/BSP/B-L072Z-LRWAN1 -I../Drivers/BSP/MLM32L07X01 -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Include -I../Inc -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -o Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_rcc.o ..\Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_rcc.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0plus -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32L072xx -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/BSP/B-L072Z-LRWAN1 -I../Drivers/BSP/MLM32L07X01 -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Include -I../Inc -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -o Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_ll_rng.o ..\Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_ll_rng.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0plus -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32L072xx -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/BSP/B-L072Z-LRWAN1 -I../Drivers/BSP/MLM32L07X01 -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Include -I../Inc -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -o Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_dma.o ..\Drivers\STM32L0xx_HAL_Driver\Src\stm32l0xx_hal_dma.c 
arm-atollic-eabi-gcc -c -mthumb -mcpu=cortex-m0plus -std=gnu11 -D__weak=__attribute__((weak)) -D__packed=__attribute__((__packed__)) -DUSE_HAL_DRIVER -DSTM32L072xx -I../Drivers/CMSIS/Device/ST/STM32L0xx/Include -I../Drivers/STM32L0xx_HAL_Driver/Inc -I../Drivers/BSP/B-L072Z-LRWAN1 -I../Drivers/BSP/MLM32L07X01 -I../Drivers/STM32L0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Include -I../Inc -Os -ffunction-sections -fdata-sections -g -fstack-usage -Wall -o Src\stm32l4xx_hal_msp.o ..\Src\stm32l4xx_hal_msp.c 
In file included from ../Inc/hw.h:74:0,
                 from ..\Src\stm32l4xx_hal_msp.c:49:
../Inc/hw_gpio.h:99:60: error: unknown type name 'GPIO_InitTypeDef'
 void HW_GPIO_Init( GPIO_TypeDef* GPIOx, uint16_t GPIO_Pin, GPIO_InitTypeDef* initStruct);
                                                            ^
In file included from ../Inc/hw.h:76:0,
                 from ..\Src\stm32l4xx_hal_msp.c:49:
../Inc/hw_rtc.h:69:23: fatal error: utilities.h: No such file or directory
compilation terminated.

12:25:38 Build Finished (took 5s.960ms)

